--- a/E-Project Pharmacy/Views/Shared/Dash.cshtml
+++ b/E-Project Pharmacy/Views/Shared/Dash.cshtml
@@ -146,8 +146,10 @@
                         <div class="bg-white py-2 collapse-inner rounded">
                             <a class="collapse-item" asp-action="show_contact" asp-controller="Dashboard">Contact Infor</a>
                             <a class="collapse-item" asp-action="show_quote" asp-controller="Dashboard">Users Feedback</a>
+                            <a class="collapse-item" asp-action="show_order" asp-controller="Dashboard">Users Order</a>
 
                         </div>
+                        show_order
                     </div>
                 </li>
 
