--- a/E-Project Pharmacy/Views/Home/account_detail.cshtml
+++ b/E-Project Pharmacy/Views/Home/account_detail.cshtml
@@ -56,6 +56,7 @@
                                                     </thead>
                                                     <tbody>
                                                         @foreach (var value in ViewBag.order){
+                                                            @if(value.user_id.ToString() == ClassSessionUser.UserId){
                                                             <tr>
                                                                 <td>
                                                                     <div class="d-flex align-items-center">
@@ -75,8 +76,10 @@
                                                                 </td>
 
                                                             </tr>
-                                                       
+                                                            }
+                                                           
                                                         }
+                                                       
                                                     </tbody>
                                                 </table>
                                             </div>
